--- a/sample/src/main/res/layout/activity_web.xml
+++ b/sample/src/main/res/layout/activity_web.xml
@@ -6,30 +6,6 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.just.agentweb.sample.activity.MainActivity">
-
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?android:actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:titleTextColor="@android:color/white"
-        app:theme="@style/toolBar"
-        app:titleTextColor="@android:color/white">
-
-
-        <TextView
-            android:id="@+id/toolbar_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:singleLine="true"
-            android:textColor="@android:color/white"
-            android:textSize="14sp"/>
-    </android.support.v7.widget.Toolbar>
-
-    
+    android:orientation="vertical">
 
 </LinearLayout>
