--- a/sample/src/main/res/values/styles.xml
+++ b/sample/src/main/res/values/styles.xml
@@ -20,7 +20,7 @@
         <item name="colorControlNormal">#ffffff</item>
         <item name="android:homeAsUpIndicator">@mipmap/cha</item>
         <item name="android:titleTextStyle">@style/titlestyle</item>
-
+        <item name="android:windowNoTitle">true</item>
     </style>
 
     <style name="titlestyle">
